# kukasaataa

./: .dockerignore  .gitignore  README.md  docker-compose.dev.yml  docker-compose.yml  edit-texts.sh  nginx.conf  nginx.dev.conf  package-lock.json  pyproject.toml  tasks.py
scripts/: validate-texts.js
src/backend/: Dockerfile  app.py  hankeikkuna.py
src/backend/services/: db_service.py  selection_db_service.py
src/fetcher/: Dockerfile  main.py  pyproject.toml
src/fetcher/exporters/: exporter.py
src/fetcher/services/: avoindata_api_service.py  db_service.py  hankeikkuna_api_service.py
src/fetcher/utils/: avoindata.py  hankeikkuna.py  retry.py
src/fetcher/utils/avoindata/: pdf_utils.py  processors.py  xml_utils.py
src/fetcher/utils/hankeikkuna/: pdf_utils.py  processors.py
src/frontend/: Dockerfile  nginx.conf  package-lock.json  package.json
src/frontend/public/: index.html
src/frontend/src/: App.css  App.js  Home.js  texts.json
src/frontend/src/components/: BackButton.jsx  DocumentInfo.jsx  Instructions.jsx  Pagination.jsx  PreparatoryDocuments.jsx  Project.jsx  ProposalContent.js  ProposalContent.jsx  ResultItem.css  ResultItem.js  ResultItem.jsx  SearchField.js  SearchField.jsx  SearchResults.js  SearchResults.jsx  SelectedProjects.js  SelectedProjects.jsx  StudentProject.jsx  StudentView.jsx  Submission.jsx  Summary.jsx  SummaryItem.jsx
src/frontend/src/views/: DocumentSelectionView.jsx  HomeView.jsx  ProjectSelectionView.jsx  StudentView.jsx  SummaryView.jsx
